--- a/Functions.Infrastructure/Functions.Infrastructure.csproj
+++ b/Functions.Infrastructure/Functions.Infrastructure.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
